--- a/src/main/resources/LoginView.fxml
+++ b/src/main/resources/LoginView.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -25,7 +26,8 @@
             <Font size="15.0" />
          </font>
       </Text>
-      <TextField fx:id="passwordFieldLogin" layoutX="178.0" layoutY="219.0" />
-      <Button layoutX="178.0" layoutY="255.0" mnemonicParsing="false" text="Login" onAction="#handleLoginData"/>
+      <PasswordField fx:id="passwordFieldLogin" layoutX="178.0" layoutY="219.0" />
+      <Button layoutX="178.0" layoutY="255.0" mnemonicParsing="false" onAction="#handleLoginData" text="Login" />
+      <Label fx:id="errorMassageLogin" layoutX="178.0" layoutY="294.0" />
    </children>
 </AnchorPane>
