--- a/src/main/resources/RegisterView.fxml
+++ b/src/main/resources/RegisterView.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="465.0" prefWidth="651.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="89.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please register in education portal" wrappingWidth="421.13671875">
          <font>
@@ -19,7 +20,7 @@
             <Font size="15.0" />
          </font>
       </Text>
-      <TextField fx:id="nameField"  layoutX="89.0" layoutY="143.0" />
+      <TextField fx:id="nameField" layoutX="89.0" layoutY="143.0" />
       <Text layoutX="89.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" wrappingWidth="79.13671875">
          <font>
             <Font size="15.0" />
@@ -31,7 +32,14 @@
             <Font size="15.0" />
          </font>
       </Text>
-      <Button layoutX="89.0" layoutY="302.0" mnemonicParsing="false" text="Register" onAction="#handleRegisterData"/>
+      <Button layoutX="89.0" layoutY="349.0" mnemonicParsing="false" onAction="#handleRegisterData" text="Register" />
       <PasswordField fx:id="passwordField" layoutX="89.0" layoutY="262.0" />
+      <Label fx:id="errorMassageRegister" layoutX="80.0" layoutY="390.0" prefHeight="20.0" prefWidth="440.0" />
+      <PasswordField fx:id="repeatPasswordField" layoutX="89.0" layoutY="315.0" />
+      <Text layoutX="89.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Repeat password" wrappingWidth="178.13671875">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
