--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="519.0" layoutY="33.0" mnemonicParsing="false" text="+" />
-      <Text layoutX="440.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add teacher " />
+      <Button layoutX="551.0" layoutY="32.0" mnemonicParsing="false" text="+" />
+      <Text layoutX="474.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add teacher " />
       <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manager " />
+      <ListView fx:id="teacherListView" layoutX="130.0" layoutY="76.0" prefHeight="268.0" prefWidth="445.0" />
    </children>
 </AnchorPane>
