--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
@@ -33,6 +32,7 @@
 
       <Button layoutX="119.0" layoutY="67.0" mnemonicParsing="false" text="Manage courses" />
       <Button layoutX="244.0" layoutY="67.0" mnemonicParsing="false" text="Manage users" />
-      <Button layoutX="350.0" layoutY="67.0" mnemonicParsing="false" text="Add teachers" onAction="#openAddTeacherWindow"/>
+      <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" text="Add teachers" />
+      <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" text="Add courses" onAction="#openAddCourseWindow"/>
    </children>
 </AnchorPane>
