--- a/src/main/resources/AddTeacherView.fxml
+++ b/src/main/resources/AddTeacherView.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<?import javafx.scene.control.PasswordField?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="28.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adding teacher " />
       <TextField fx:id="name" layoutX="28.0" layoutY="59.0" />
@@ -18,8 +19,10 @@
       <Text layoutX="28.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City" />
       <PasswordField fx:id="password" layoutX="28.0" layoutY="217.0" />
       <Text layoutX="28.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-      <TextField fx:id="subject" layoutX="28.0" layoutY="274.0" />
-      <Text layoutX="28.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject" />
-      <Button layoutX="27.0" layoutY="313.0" mnemonicParsing="false" text="Add teacher" onAction="#addTeacher" />
+      <Text layoutX="28.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course" />
+      <Button layoutX="27.0" layoutY="325.0" mnemonicParsing="false" onAction="#addTeacher" text="Add teacher" />
+      <MenuButton fx:id="courseMenuButton" layoutX="28.0" layoutY="282.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Choose course">
+
+      </MenuButton>
    </children>
 </AnchorPane>
