--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -32,7 +32,7 @@
 
       <Button layoutX="119.0" layoutY="67.0" mnemonicParsing="false" text="Manage courses" />
       <Button layoutX="244.0" layoutY="67.0" mnemonicParsing="false" text="Manage users" />
-      <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" text="Add teachers" />
+      <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" text="Add teachers" onAction="#openAddTeacherWindow"/>
       <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" text="Add courses" onAction="#openAddCourseWindow"/>
    </children>
 </AnchorPane>
