--- a/src/main/resources/AddTeacherView.fxml
+++ b/src/main/resources/AddTeacherView.fxml
@@ -2,27 +2,37 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="28.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adding teacher " />
-      <TextField fx:id="name" layoutX="28.0" layoutY="59.0" />
-      <Text layoutX="28.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-      <TextField fx:id="email" layoutX="28.0" layoutY="115.0" />
-      <Text layoutX="28.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
-      <TextField fx:id="city" layoutX="28.0" layoutY="167.0" />
-      <Text layoutX="28.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City" />
-      <PasswordField fx:id="password" layoutX="28.0" layoutY="217.0" />
-      <Text layoutX="28.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-      <Text layoutX="28.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course" />
-      <Button layoutX="27.0" layoutY="325.0" mnemonicParsing="false" onAction="#addTeacher" text="Add teacher" />
-      <MenuButton fx:id="courseMenuButton" layoutX="28.0" layoutY="282.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Choose course">
+      <Text layoutX="68.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adding teacher " />
+      <TextField fx:id="name" layoutX="68.0" layoutY="77.0" />
+      <Text layoutX="68.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+      <TextField fx:id="email" layoutX="68.0" layoutY="139.0" />
+      <Text layoutX="68.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
+      <TextField fx:id="city" layoutX="68.0" layoutY="185.0" />
+      <Text layoutX="68.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City" />
+      <PasswordField fx:id="password" layoutX="68.0" layoutY="235.0" />
+      <Text layoutX="68.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+      <Text layoutX="68.0" layoutY="288.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course" />
+      <Button layoutX="67.0" layoutY="343.0" mnemonicParsing="false" onAction="#addTeacher" text="Add teacher" />
+      <MenuButton fx:id="courseMenuButton" layoutX="68.0" layoutY="300.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Choose course">
 
       </MenuButton>
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png"/>
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
