--- a/src/main/resources/LoginView.fxml
+++ b/src/main/resources/LoginView.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="178.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please login to the portal">
@@ -29,5 +31,14 @@
       <PasswordField fx:id="passwordFieldLogin" layoutX="178.0" layoutY="219.0" />
       <Button layoutX="178.0" layoutY="255.0" mnemonicParsing="false" onAction="#handleLoginData" text="Login" />
       <Label fx:id="errorMassageLogin" layoutX="178.0" layoutY="294.0" prefHeight="29.0" prefWidth="243.0" />
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png"/>
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
