--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ListView fx:id="teacherListView" layoutX="120.0" layoutY="109.0" prefHeight="268.0" prefWidth="445.0" />
@@ -34,5 +36,14 @@
       <Button layoutX="244.0" layoutY="67.0" mnemonicParsing="false" text="Manage users" />
       <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" text="Add teachers" onAction="#openAddTeacherWindow"/>
       <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" text="Add courses" onAction="#openAddCourseWindow"/>
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png"/>
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
