--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -5,13 +5,15 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ListView fx:id="teacherListView" layoutX="120.0" layoutY="109.0" prefHeight="268.0" prefWidth="445.0" />
@@ -34,16 +36,26 @@
 
       <Button layoutX="119.0" layoutY="67.0" mnemonicParsing="false" text="Manage courses" />
       <Button layoutX="244.0" layoutY="67.0" mnemonicParsing="false" text="Manage users" />
-      <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" text="Add teachers" onAction="#openAddTeacherWindow"/>
-      <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" text="Add courses" onAction="#openAddCourseWindow"/>
+      <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" onAction="#openAddTeacherWindow" text="Add teachers" />
+      <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" onAction="#openAddCourseWindow" text="Add courses" />
       <Button onAction="#returnToPreviousForm">
          <graphic>
             <ImageView fitHeight="20" fitWidth="20">
                <image>
-                  <Image url="@/images/arrow_back.png"/>
+                  <Image url="@/images/arrow_back.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
+      <TableView fx:id="userTable" layoutX="120.0" layoutY="109.0" prefHeight="268.0" prefWidth="445.0">
+        <columns>
+          <TableColumn fx:id="fullNameColumn" prefWidth="75.0" text="Full Name" />
+          <TableColumn fx:id="emailColumn" prefWidth="75.0" text="Email" />
+            <TableColumn fx:id="roleColumn" prefWidth="75.0" text="Role " />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
