--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -21,16 +21,10 @@
          <font>
             <Font size="31.0" />
          </font></Text>
-      <Text layoutX="18.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Role" />
-      <CheckBox layoutX="18.0" layoutY="109.0" mnemonicParsing="false" text="Teachers" />
-      <CheckBox layoutX="18.0" layoutY="136.0" mnemonicParsing="false" text="Students" />
-      <Text layoutX="18.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" />
-      <SplitMenuButton layoutX="14.0" layoutY="208.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="97.0" text="City">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </SplitMenuButton>
+      <Text layoutX="18.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Role" />
+      <CheckBox fx:id="teacherCheckBox" layoutX="18.0" layoutY="109.0" mnemonicParsing="false" text="Teachers" />
+      <CheckBox fx:id="studentCheckBox" layoutX="18.0" layoutY="136.0" mnemonicParsing="false" text="Students" />
+      <Text layoutX="16.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" />
       <TextField layoutX="119.0" layoutY="20.0" prefWidth="370.0" />
       <Text layoutX="501.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Account" wrappingWidth="51.562496185302734" />
 
@@ -57,5 +51,9 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
+      <Button fx:id="filterBTN" layoutX="10.0" layoutY="352.0" mnemonicParsing="false" onAction="#applyFilters" prefHeight="25.0" prefWidth="99.0" text="Apply Filters" />
+      <MenuButton fx:id="locationMenu" layoutX="16.0" layoutY="188.0" mnemonicParsing="false" text="City">
+
+      </MenuButton>
    </children>
 </AnchorPane>
