--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -14,6 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.MenuItem?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ListView fx:id="teacherListView" layoutX="120.0" layoutY="109.0" prefHeight="268.0" prefWidth="445.0" />
@@ -52,8 +52,10 @@
          </columnResizePolicy>
       </TableView>
       <Button fx:id="filterBTN" layoutX="10.0" layoutY="352.0" mnemonicParsing="false" onAction="#applyFilters" prefHeight="25.0" prefWidth="99.0" text="Apply Filters" />
-      <MenuButton fx:id="locationMenu" layoutX="16.0" layoutY="188.0" mnemonicParsing="false" text="City">
-
+      <MenuButton fx:id="locationMenu" layoutX="7.0" layoutY="188.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Select location">
+         <items>
+            <MenuItem fx:id="allLocations" text="All locations"></MenuItem>
+         </items>
       </MenuButton>
    </children>
 </AnchorPane>
