--- a/src/main/resources/ManageCourses.fxml
+++ b/src/main/resources/ManageCourses.fxml
@@ -8,13 +8,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="courseTable" layoutX="160.0" layoutY="91.0" prefHeight="233.0" prefWidth="383.0">
         <columns>
           <TableColumn fx:id="courseTitleColumn" prefWidth="75.0" text="Course" />
-          <TableColumn prefWidth="75.0" text="Teacher" />
+          <TableColumn fx:id="courseTeacherColumn" prefWidth="75.0" text="Teacher" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -26,6 +25,7 @@
          </font>
       </Text>
       <TextField layoutX="160.0" layoutY="48.0" prefHeight="26.0" prefWidth="383.0" />
-      <Button layoutX="433.0" layoutY="336.0" mnemonicParsing="false" text="Manage course" />
+      <Button layoutX="264.0" layoutY="338.0" mnemonicParsing="false" text="Manage course" />
+      <Button layoutX="382.0" layoutY="338.0" mnemonicParsing="false" text="Manage course description" onAction="#manageDescription"/>
    </children>
 </AnchorPane>
