--- a/src/main/resources/EditCourseDescription.fxml
+++ b/src/main/resources/EditCourseDescription.fxml
@@ -5,18 +5,29 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text fx:id="courseTitle" layoutX="256.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title" wrappingWidth="88.13671875">
+      <Text fx:id="courseTitle" layoutX="40.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title" wrappingWidth="520.13671875">
          <font>
             <Font size="36.0" />
          </font>
       </Text>
-      <Text fx:id="courseCode" layoutX="55.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course code" />
-      <Text fx:id="courseInstruction" layoutX="55.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor" />
-      <TextArea fx:id="courseDescription" layoutX="55.0" layoutY="200.0" prefHeight="79.0" prefWidth="337.0" />
-      <Text layoutX="55.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course description" />
-      <Text fx:id="courseDuration" layoutX="55.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course duration" />
+      <Text fx:id="courseCode" layoutX="40.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course code" />
+      <Text fx:id="courseInstruction" layoutX="40.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor" />
+      <Text fx:id="courseDescription" layoutX="40.0" layoutY="178.0"/>
+      <Text layoutX="40.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course description" />
+      <Text fx:id="courseDuration" layoutX="40.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course duration" />
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
