--- a/src/main/resources/ManageCourses.fxml
+++ b/src/main/resources/ManageCourses.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="courseTable" layoutX="160.0" layoutY="91.0" prefHeight="233.0" prefWidth="383.0">
@@ -27,5 +29,14 @@
       <TextField layoutX="160.0" layoutY="48.0" prefHeight="26.0" prefWidth="383.0" />
       <Button layoutX="264.0" layoutY="338.0" mnemonicParsing="false" text="Manage course" />
       <Button layoutX="382.0" layoutY="338.0" mnemonicParsing="false" text="Manage course description" onAction="#manageDescription"/>
+       <Button onAction="#returnToPreviousForm">
+           <graphic>
+               <ImageView fitHeight="20" fitWidth="20">
+                   <image>
+                       <Image url="@/images/arrow_back.png" />
+                   </image>
+               </ImageView>
+           </graphic>
+       </Button>
    </children>
 </AnchorPane>
