--- a/src/main/resources/CourseDescriptionPreview.fxml
+++ b/src/main/resources/CourseDescriptionPreview.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text fx:id="courseTitle" layoutX="40.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title" wrappingWidth="520.13671875">
@@ -17,9 +16,9 @@
       </Text>
       <Text fx:id="courseCode" layoutX="40.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course code" />
       <Text fx:id="courseInstruction" layoutX="40.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Instructor" />
-      <Text fx:id="courseDescription" layoutX="40.0" layoutY="178.0"/>
-      <Text layoutX="40.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course description" />
-      <Text fx:id="courseDuration" layoutX="40.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course duration" />
+      <Text fx:id="courseDescription" layoutX="41.0" layoutY="202.0" />
+      <Text layoutX="41.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course description" />
+      <Text fx:id="courseDuration" layoutX="40.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course duration" />
       <Button onAction="#returnToPreviousForm">
          <graphic>
             <ImageView fitHeight="20" fitWidth="20">
@@ -29,5 +28,6 @@
             </ImageView>
          </graphic>
       </Button>
+      <Button layoutX="501.0" layoutY="26.0" mnemonicParsing="false" text="Edit" onAction="#openEditDescriptionWindow"/>
    </children>
 </AnchorPane>
