--- a/src/main/resources/AddNewSubTopicView.fxml
+++ b/src/main/resources/AddNewSubTopicView.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.text.Text?>
 
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="507.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="24.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add sub topic">
@@ -22,5 +24,14 @@
       <Text layoutX="25.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add images" />
       <Text layoutX="25.0" layoutY="353.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Assignment" />
       <Button layoutX="21.0" layoutY="451.0" mnemonicParsing="false" text="Save" onAction="#addSubTopic"/>
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png"/>
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
