--- a/src/main/resources/AddNewTopicView.fxml
+++ b/src/main/resources/AddNewTopicView.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.text.Text?>
 
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="210.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new topic ">
@@ -18,5 +20,14 @@
       <TextField fx:id="title" layoutX="32.0" layoutY="92.0" />
       <Text layoutX="32.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="83.13671875" />
       <Button layoutX="32.0" layoutY="200.0" mnemonicParsing="false" text="Save" onAction="#addTopic"/>
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png"/>
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
