--- a/src/main/resources/ManageCourseContent.fxml
+++ b/src/main/resources/ManageCourseContent.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -14,6 +16,26 @@
          </font>
       </Text>
       <TreeView fx:id="courseContentList" layoutX="372.0" layoutY="62.0" prefHeight="297.0" prefWidth="200.0" />
-      <Button layoutX="372.0" layoutY="361.0" mnemonicParsing="false" text="Add topic" onAction="#openAddTopicWindow"/>
+      <Button layoutX="372.0" layoutY="361.0" mnemonicParsing="false" onAction="#openAddTopicWindow" text="Add topic" />
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Text fx:id="courseTitle" layoutX="129.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course title" wrappingWidth="147.8447265625">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="subTopicTitle" layoutX="84.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title " wrappingWidth="192.451171875">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="mainContent" layoutX="15.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Content" wrappingWidth="325.451171875" />
    </children>
 </AnchorPane>
