--- a/src/main/resources/AddNewSubTopicView.fxml
+++ b/src/main/resources/AddNewSubTopicView.fxml
@@ -3,13 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="507.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="24.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add sub topic">
@@ -23,15 +22,17 @@
       <TextArea fx:id="content" layoutX="24.0" layoutY="163.0" prefHeight="98.0" prefWidth="439.0" />
       <Text layoutX="25.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add images" />
       <Text layoutX="25.0" layoutY="353.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Assignment" />
-      <Button layoutX="21.0" layoutY="451.0" mnemonicParsing="false" text="Save" onAction="#addSubTopic"/>
+      <Button layoutX="21.0" layoutY="451.0" mnemonicParsing="false" onAction="#addSubTopic" text="Save" />
       <Button onAction="#returnToPreviousForm">
          <graphic>
             <ImageView fitHeight="20" fitWidth="20">
                <image>
-                  <Image url="@/images/arrow_back.png"/>
+                  <Image url="@/images/arrow_back.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
+      <Button fx:id="uploadButton" layoutX="20.0" layoutY="383.0" mnemonicParsing="false" onAction="#uploadAssignment" text="Select a file" />
+      <Text fx:id="selectedFile" layoutX="24.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No file was selected " />
    </children>
 </AnchorPane>
