--- a/src/main/resources/ManageCourseContent.fxml
+++ b/src/main/resources/ManageCourseContent.fxml
@@ -37,5 +37,6 @@
          </font>
       </Text>
       <Text fx:id="mainContent" layoutX="15.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Content" wrappingWidth="325.451171875" />
+      <Text fx:id="fileName" layoutX="15.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignment" />
    </children>
 </AnchorPane>
