--- a/src/main/resources/ManageCourseContent.fxml
+++ b/src/main/resources/ManageCourseContent.fxml
@@ -16,7 +16,7 @@
          </font>
       </Text>
       <TreeView fx:id="courseContentList" layoutX="372.0" layoutY="62.0" prefHeight="297.0" prefWidth="200.0" />
-      <Button layoutX="372.0" layoutY="361.0" mnemonicParsing="false" onAction="#deleteCourseContentItem" text="Delete topic" />
+      <Button layoutX="432.0" layoutY="361.0" mnemonicParsing="false" onAction="#deleteCourseContentItem" text="Delete topic" />
       <Button onAction="#returnToPreviousForm">
          <graphic>
             <ImageView fitHeight="20" fitWidth="20">
@@ -38,5 +38,6 @@
       </Text>
       <Text fx:id="mainContent" layoutX="15.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Content" wrappingWidth="325.451171875" />
       <Text fx:id="fileName" layoutX="15.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignment" />
+      <Button layoutX="372.0" layoutY="361.0" mnemonicParsing="false" text="Edit " onAction="#editCourseContent"/>
    </children>
 </AnchorPane>
