--- a/src/main/resources/ManageCourseContent.fxml
+++ b/src/main/resources/ManageCourseContent.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.EduTech.educationportal.app.view.shared.ManageCourseContentController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <Text layoutX="398.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course content">
          <font>
