--- a/src/main/resources/ManagerDashboard.fxml
+++ b/src/main/resources/ManagerDashboard.fxml
@@ -29,7 +29,7 @@
       <Text fx:id="manageAccountText" layoutX="501.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Account" wrappingWidth="51.562496185302734" />
 
       <Button layoutX="119.0" layoutY="67.0" mnemonicParsing="false" text="Manage courses" onAction="#openManageCourseWindow"/>
-      <Button layoutX="244.0" layoutY="67.0" mnemonicParsing="false" text="Manage users" />
+      <Button layoutX="244.0" layoutY="67.0" mnemonicParsing="false" text="Manage user" onAction="#manageUser"/>
       <Button layoutX="455.0" layoutY="67.0" mnemonicParsing="false" onAction="#openAddTeacherWindow" text="Add teachers" />
       <Button layoutX="351.0" layoutY="67.0" mnemonicParsing="false" onAction="#openAddCourseWindow" text="Add courses" />
       <Button onAction="#returnToPreviousForm">
