--- a/src/main/resources/StudentDashboard.fxml
+++ b/src/main/resources/StudentDashboard.fxml
@@ -1,25 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="courseTabPane" layoutX="176.0" layoutY="91.0" prefHeight="309.0" prefWidth="412.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="All courses">
+          <Tab fx:id="allCoursesTab" text="All courses">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="332.0" prefWidth="120.0">
+                     <children>
+                        <ListView fx:id="allCoursesListView" prefHeight="279.0" prefWidth="412.0" />
+                     </children></AnchorPane>
             </content>
           </Tab>
-          <Tab text="Subscribed courses">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
+          <Tab fx:id="subscribedCoursesTab" text="Subscribed courses">
+              <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="332.0" prefWidth="120.0">
+                      <children>
+                          <ListView fx:id="subscribedCoursesList" prefHeight="279.0" prefWidth="412.0" />
+                      </children></AnchorPane>
+              </content>
           </Tab>
         </tabs>
       </TabPane>
+      <Text layoutX="543.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage account" wrappingWidth="54.27734375" />
+      <Text layoutX="37.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filters ">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Text>
+      <TextField layoutX="176.0" layoutY="34.0" prefHeight="25.0" prefWidth="412.0" />
+      <Text layoutX="37.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Courses" />
+      <Button layoutX="37.0" layoutY="233.0" mnemonicParsing="false" text="Apply filters" />
    </children>
 </AnchorPane>
